# parsim

./: .gitmodules  CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
res/shaders/particles/: point.frag  point.vert
src/: main.cpp
src/Particles/: Grid.hpp  ParticleArray.hpp
